# qmp-kit

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docker.yml  pre-commit.yml  wheels.yml
qmb/: __main__.py  _hamiltonian_cuda.cu  common.py  grassmann.py  guide.py  haar.py  hamiltonian.py  hubbard_s.py  ising.py  markov.py  mlp.py  orbit.py  peps.py  pert.py  rbm.py  rlim.py  transformers_mps.py
qmp/: __main__.py  _hamiltonian.cpp  _hamiltonian_cpu.cpp  _hamiltonian_cuda.cu  common.py  hamiltonian.py  model_dict.py  subcommand_dict.py
qmp/algorithms/: chop_imag.py  guide.py  haar.py  natural_haar.py  pert.py  precompile.py  pretrain.py  ranked_haar.py  rldiag.py  vmc.py
qmp/models/: fcidump.py  free_fermion.py  hubbard.py  ising.py  openfermion.py
qmp/networks/: attention.py  crossmlp.py  mlp.py  peps.py
qmp/utility/: model_dict.py
tests/: bitspack_test.py  extension_test.py
