[build-system]
requires = ["setuptools>=78.0,<80.10", "setuptools_scm>=8.2,<9.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qmp-kit"
dynamic = ["version"]
dependencies = [
  "platformdirs>=4.5.1",
  "numpy>=2.3.5",
  "scipy>=1.16.3",
  "torch>=2.9.1",
  "pybind11>=3.0.1",
  "ninja>=1.13.0",
  "hydra-core>=1.3.2",
  "openfermion>=1.7.1",
  "tensorboard>=2.20.0",
]
requires-python = ">=3.12"
authors = [{ name = "Hao Zhang", email = "hzhangxyz@outlook.com" }]
description = "Quantum Manybody Problem"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["quantum", "manybody", "quantum-chemistry", "quantum-simulation", "molecular-simulation", "algorithms", "simulation", "wave-function", "ground-state", "ansatz", "torch", "pytorch"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Environment :: GPU :: NVIDIA CUDA",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "ruff~=0.14.6",
  "mypy>=1.15,<1.19",
]

[project.urls]
Homepage = "https://github.com/USTC-KnowledgeComputingLab/qmp-kit"
Documentation = "https://github.com/USTC-KnowledgeComputingLab/qmp-kit"
Repository = "https://github.com/USTC-KnowledgeComputingLab/qmp-kit.git"
Issues = "https://github.com/USTC-KnowledgeComputingLab/qmp-kit/issues"

[project.scripts]
qmp = "qmp.__main__:main"
qmp-kit = "qmp.__main__:main"

[tool.setuptools.packages.find]
include = ["qmp"]

[tool.setuptools.package-data]
qmp = ["*.cpp", "*.cu"]

[tool.setuptools_scm]
version_file = "qmp/_version.py"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E741", "E743", "F841"]

[tool.ruff.format]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
